Fix alignment of header links

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -130,7 +130,7 @@
             display: inline-block;
             position: relative;
             margin: 0 10px;
-            padding-bottom: 10px;
+            padding: 10px 0;
             font-weight: 700;
             cursor: default;
 
