--- a/style.css
+++ b/style.css
@@ -20078,7 +20078,7 @@ a:hover {
   display: inline-block;
   position: relative;
   margin: 0 10px;
-  padding-bottom: 10px;
+  padding: 10px 0;
   font-weight: 700;
   cursor: default;
 }
